[gd_scene load_steps=6 format=3 uid="uid://c258ftohgh8ui"]

[ext_resource type="FontFile" uid="uid://c2f72s2s2idlj" path="res://art/open_sans/static/OpenSans-ExtraBold.ttf" id="1_djdg6"]
[ext_resource type="Script" uid="uid://c2x78s23siyaq" path="res://ui/weapon_selector.gd" id="2_q8iwr"]
[ext_resource type="Texture2D" uid="uid://7eh41dnv33w8" path="res://art/images/gun_rocket_icon.png" id="3_q8iwr"]

[sub_resource type="FontVariation" id="FontVariation_q7ykw"]
base_font = ExtResource("1_djdg6")
spacing_glyph = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e63mn"]
bg_color = Color(0, 0.423529, 0.917647, 0.211765)
border_width_top = 8
border_color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="WeaponSelector" type="Button" groups=["menu_control"]]
custom_minimum_size = Vector2(80, 80)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = SubResource("FontVariation_q7ykw")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_e63mn")
script = ExtResource("2_q8iwr")
metadata/weapon_id = "GUN_ROCKET"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPad" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GunIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_q8iwr")
expand_mode = 1
stretch_mode = 4

[node name="RightPad" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GunText" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Text"
horizontal_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
